# cpp-update-agent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: agent.conf  manifest.example.json
include/: config.h  downloader.h  installer.h  logger.h  package.h  update_agent.h  verifier.h
scripts/: build.sh  update_agent.service
src/: downloader.cpp  installer.cpp  main.cpp  update_agent.cpp
tests/: test_config.cpp  test_manifest_parser.cpp  test_parallel_download.cpp  test_verifier.cpp
